Update main property in package.json, and update readme to show proper usage

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "blink1-morse-code",
   "version": "1.0.0",
   "description": "Simple function to make a connected blink(1) device blink out a given input in morse code",
+  "main": "blinkmorse.js",
   "dependencies": {
     "node-blink1": "^0.5.1"
   },
