--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "name": "Alex Vulaj",
     "url": "https://github.com/AlexVulaj"
   },
+  "files": [
+    "blinkmorse.js"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/AlexVulaj/blink1-morse-code.git"
